Second try at fixing location bar icon keyboard activation.

Space activates on up, enter activates on down.

BUG=608645

Review-Url: https://codereview.chromium.org/1947533003
Cr-Commit-Position: refs/heads/master@{#391451}

Former-commit-id: b98dddabd0ed3058a834d759e067800891c00501